Added buttons to the page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,25 @@
 </head>
 
 <body>
-
+<!--Header-->
     <header class="header">
-        <h1>Coding Quiz</h1>
+        <h1>Coding Quiz`</h1>
+        <p>This is a quiz that will have questions on html, css, javascript and will be timed. Good Luck...!!!</p>
     </header>
-    
+
+<article> 
+    <h2 id="Begin">You may start when you're ready</h2>  
+    <button type="button" class="btn Start">Start</button>
+    <!--<button type="button" class="btn Scores">Highscores</button>!-->
+    <ul>
+        <li><button id="A">A</button></li>
+        <li><button id="B">B</button></li>
+        <li><button id="C">C</button></li>
+        <li><button id="D">D</button></li>
+    </ul>
+</article>
+
+
+   <script src="./script.js"></script> 
 </body>
 </html>
